Baselined UI and buttons

--- a/res/drawable/dialerbutton.xml
+++ b/res/drawable/dialerbutton.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
+<!-- 
+ *  Copyright (c) 2011 by Twilio, Inc., all rights reserved.
+ *
+ *  Use of this software is subject to the terms and conditions of 
+ *  the Twilio Terms of Service located at http://www.twilio.com/legal/tos
+ -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape android:shape="oval">
             <solid
-                    android:color="#088da5" />
+                    android:color="#0099cc" />
 			<corners
             android:bottomLeftRadius="20.0dip"
             android:bottomRightRadius="20.0dip"
@@ -11,20 +17,13 @@
             android:topLeftRadius="20.0dip"
             android:topRightRadius="20.0dip" >
 			</corners>            
-            <!-- <corners
-                    android:radius="10dp" />
-            <padding
-                    android:left="10dp"
-                    android:top="10dp"
-                    android:right="10dp"
-                    android:bottom="10dp" /> -->
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
             <gradient
                     android:startColor="#ffffff"
-                    android:endColor="#088da5"
+                    android:endColor="#ffffff"
                     />
             <corners
             android:bottomLeftRadius="20.0dip"
@@ -32,14 +31,6 @@
             android:radius="20.0dip"
             android:topLeftRadius="20.0dip"
             android:topRightRadius="20.0dip" />
-            
-           <!--  <corners
-                    android:radius="10dp" />
-            <padding
-                    android:left="10dp"
-                    android:top="10dp"
-                    android:right="10dp"
-                    android:bottom="10dp" /> -->
         </shape>
     </item>
 </selector>
