--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,59 +6,58 @@
  *  the Twilio Terms of Service located at http://www.twilio.com/legal/tos
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:gravity="fill_vertical|center_horizontal"
+    android:orientation="vertical" 
+    android:background="#FAFAFA">
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="99dp"
         android:baselineAligned="false"
-        android:layout_weight="1">
+        android:orientation="horizontal" >
 
-        <Spinner
+        <Button
             android:id="@+id/countryCodeSpinner"
             android:layout_width="40dp"
-            android:layout_marginBottom="40dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="40dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center"
-            android:singleLine="true"
-            android:entries="@array/country_arrays"
-            android:prompt="@string/country_prompt"
-            />
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/usflag"
+            android:singleLine="true" />
 
         <EditText
             android:id="@+id/numberField"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="40dp"
-            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
             android:layout_gravity="center"
-            android:singleLine="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="0.5"
             android:background="@android:color/transparent"
             android:inputType="number"
             android:maxLength="15"
-            android:textColor="#ffffff"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:singleLine="true"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/clearTextBtn"
-             android:layout_marginBottom="40dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="40dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:singleLine="true"
             android:layout_gravity="right|center"
-            android:background="@drawable/cancelicon" />
+            android:layout_marginBottom="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/backspaceimage"
+            android:singleLine="true"
+            android:visibility="visible" />
     </LinearLayout>
 
     <TableLayout
@@ -66,25 +65,29 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="1"
-        android:weightSum="1.00" >
+        android:weightSum="1.00" 
+        android:layout_weight="1" >
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp" >
+            android:orientation="vertical"
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp" >
 
             <Button
                 android:id="@+id/dialKey1"
                 style="@style/button_dialpad"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="0.33"
+                android:enabled="true"
+                android:gravity="fill_vertical|center_horizontal"
                 android:text="@string/dialPad1" />
 
             <Button
@@ -107,6 +110,7 @@
                 android:layout_weight="0.33"
                 android:text="@string/dialPad3" />
         </TableRow>
+
     </TableLayout>
 
     <TableLayout
@@ -114,17 +118,17 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_weight="1"
         android:stretchColumns="0,1,2"
-        android:weightSum="1.00" >
+        android:weightSum="1.00" 
+        android:layout_weight="1">
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp" >
+            android:orientation="vertical"
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp" >
 
             <Button
                 android:id="@+id/dialKey4"
@@ -159,6 +163,7 @@
                 android:layout_weight="0.33"
                 android:text="@string/dialPad6" />
         </TableRow>
+
     </TableLayout>
 
     <TableLayout
@@ -168,15 +173,16 @@
         android:layout_marginRight="20dp"
         android:layout_weight="1"
         android:stretchColumns="0,1,2"
-        android:weightSum="1.00" >
+        android:weightSum="1.00" 
+        >
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp" >
+            android:paddingBottom="0dp"
+            android:paddingTop="0dp" >
 
             <Button
                 android:id="@+id/dialKey7"
@@ -223,12 +229,12 @@
         android:weightSum="1.00" >
 
         <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:paddingBottom="10dp"
-            android:paddingTop="10dp" >
+            android:paddingTop="0dp" >
 
             <Button
                 android:id="@+id/dialKeyPound"
