--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,11 +30,16 @@
     </style>
 
     <style name="button_dialpad">
-        <item name="android:textColor">#0099cc</item>
+        <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">10sp</item>
         <item name="android:background">@drawable/dialerbutton</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
     </style>
 
+    	<style name="list_view">
+	       <item name="android:textColor">#FFFFFF</item>
+	       <item name="android:background">#323232</item>
+	   </style>
 </resources>
